[package]
name = "oauthsign"
version = "0.1.0"
authors = ["Karno <karnoroid@gmail.com>"]
edition = "2018"
description = "OAuth Authorization Signer Library"
license = "MIT"

[features]
default = ["reqwest"]
without-reqwest = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
hmac = "0.7.1"
sha-1 = "0.8.1"
base64 = "0.11.0"
uuid = {version = "0.8.1", features=["v4"] }
url = "2.1.0"
chrono = "0.4.10"
serde = "1.0.104"
reqwest = { version = "0.10.7", optional = true }
